# UnitTestingCourse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/Interpreter/: CMakeLists.txt  TextInterpreter.cpp
src/Interpreter/include/Interpreter/: IInterpreter.hpp  TextInterpreter.hpp
src/Log/: CMakeLists.txt
src/Log/include/Log/: Debug.hpp
src/Storage/: CMakeLists.txt  MySimpleStorage.cpp
src/Storage/include/Storage/: IStorage.hpp  MySimpleStorage.hpp
tests/: CMakeLists.txt
tests/InterpreterTests/: CMakeLists.txt  TextInterpreterModuleTests.cpp  TextInterpreterUnitTests.cpp
tests/StorageTests/: CMakeLists.txt  MySimpleStorageTests.cpp
tests/mocks/: MockIStorage.hpp
